Update schedule and fix a bug in collapse state

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ body {
 }
 .expand-icon {
     font-size: 18px;
-    transition: transform 0.3s ease;
+    transition: transform 0.16s ease;
 }
 .expanded .expand-icon {
     transform: rotate(180deg);
